<resources>
    <string-array name="animationValues">
        <item>None</item>
        <item>Slide Right</item>
        <item>Slide Up</item>
    </string-array>
    <string-array name="animationSpeedValues">
        <item>Medium</item>
        <item>Short</item>
    </string-array>
    <string-array name="actionValues">
        <item>Secondary browser</item>
        <item>Favourite share app</item>
        <item>General share</item>
    </string-array>
    <string-array name="webHeadsSpawnValues">
        <item>Right</item>
        <item>Left</item>
    </string-array>
    <string-array name="articleThemeValues">
        <item>Dark</item>
        <item>Light</item>
        <item>Auto</item>
        <item>Black</item>
    </string-array>
    <string-array name="webHeadsSizeValues">
        <item>Normal</item>
        <item>Small</item>
    </string-array>
    <string name="share_text">Hey Checkout \‘Chromer\’ for quick and secure browsing experience! Download here https://goo.gl/992ils</string>
    <string name="share_via">Share via…</string>
    <string name="custom_tab_provider_not_found">Compatible custom tab provider not found</string>
    <string name="custom_tab_provider_not_found_expln">Chromer requires you to have any Custom tab compatible browser on your phone. Currently there are no browsers on your phone that supports it. Would you like to install Google Chrome (Free) from play store? If you already have it, then please update it to latest version.</string>
    <string name="custom_tab_provider_not_found_dialog_content"><![CDATA[Could not find compatible custom tab browser on your phone. Google Chrome (Free) is recommended. You can still view webpages within Chromer and use Article mode, but for the best experience, a custom tab provider is highly recommended. Would you like to install now?]]></string>
    <string name="install">Install</string>
    <string name="licenses">Licenses</string>
    <string name="about">About</string>
    <string name="help_chromer_grow">Help Chromer grow!</string>
    <string name="share">Share</string>
    <string name="share_with">Share with %1$s</string>
    <string name="rate_play_store">Rate on Play Store</string>
    <string name="feedback">Feedback</string>
    <string name="intro">Intro</string>
    <string name="send_email">Send email…</string>
    <string name="fallback_msg">Could not open custom tab, falling back to webview.</string>
    <string name="open_with">Open with…</string>
    <string name="open_in_browser">Open in %1$s</string>
    <string name="unxp_err">Unexpected error, try again</string>
    <string name="unsupported_link">Not a supported link, try again</string>
    <string name="couldnt_load_price">Couldn\'t load price</string>
    <string name="coffee">Coffee</string>
    <string name="lunch">Lunch</string>
    <string name="premium_donation">Premium Donation</string>
    <string name="invalid_link">Invalid link</string>
    <string name="copied">Copied</string>
    <string name="copy_link">Copy link</string>
    <string name="add_to_homescreen">Add to Home Screen</string>
    <string name="intro_1">Hello! \nChromer is a light-weight, secure and a fast web browser.</string>
    <string name="intro_4_new">It can stack multiple links in floating bubbles when you open them and then load them in background!</string>
    <string name="how_to_use">How to use this?</string>
    <string name="intro_6">Just set Chromer as your default browser, Chromer will display the link in a non-intrusive way. Or choose Chromer when needed.</string>
    <string name="version">Version</string>
    <string name="changelog">Changelog</string>
    <string name="join_google_plus">Join Google+ Community</string>
    <string name="share_ideas">Share your ideas!</string>
    <string name="support_development">Support Development</string>
    <string name="consider_donation">Consider a donation</string>
    <string name="add_to_circles">Add to Google+ Circles</string>
    <string name="follow_twitter">Follow on Twitter</string>
    <string name="connect_linkedIn">Connect on LinkedIn</string>
    <string name="more_apps">More apps</string>
    <string name="author">Author</string>
    <string name="added">Added</string>
    <string name="settings">Settings</string>
    <string name="colored_toolbar">Colored toolbar</string>
    <string name="choose_animation">Opening animation</string>
    <string name="animation_speed">Animation speed</string>
    <string name="default_pref_xpln">Set Chromer as default to open all links, or you can choose Chromer from the list when it is shown</string>
    <string name="personalization">Personalization</string>
    <string name="default_clear_msg">is set as the default browser, please clear it by clicking clear defaults.</string>
    <string name="dynamic_toolbar_color">Dynamic toolbar color</string>
    <string name="keep_chrome_warmedup">Keep your browser in memory for faster launch</string>
    <string name="warmup_browser">Warm up browser</string>
    <string name="set_default_chromer">Set As Default Browser</string>
    <string name="default_provider">Custom tab provider</string>
    <string name="pre_fetch_content">Prefetch content</string>
    <string name="pre_fetch_desc">Scan your screen for links and load them in background for instant launch</string>
    <string name="accessibility_description">This service will be used by Chromer to scan text links on your screen and load them in the background. No other information is processed by Chromer. You can still use Chromer in light mode if you choose to not grant this. For more information, launch Chromer app.</string>
    <string name="accessibility_dialog_title">Accessibility permission required</string>
    <string name="accessibility_dialog_desc">To allow Chromer to scan for links in any app, it requires you to grant accessibility service permission. Please grant accessibility permission in the next screen, after which you can enable this option and enjoy quick launches.</string>
    <string name="open_settings">Open Settings</string>
    <string name="only_on_wifi">Scan only on Wi-Fi</string>
    <string name="show_notification">Show notification when a link is prefetched</string>
    <string name="default_toolbar_color">Default toolbar color</string>
    <string name="web_heads_color">Web heads color</string>
    <string name="choose_secondary_browser">Secondary browser</string>
    <string name="dynamic_toolbar_help">To enable dynamic coloring of toolbar, Chromer learns the colors silently. It might not come initially for a website or an app, but it will improve over time with usage. Enjoy!</string>
    <string name="secondary_browser_success">%1$s set as the secondary browser!</string>
    <string name="fav_share_success">%1$s set as your favorite share app!</string>
    <string name="default_provider_success">%1$s will be used to provide Custom Tabs!</string>
    <string name="based_on_app">Based on app</string>
    <string name="based_on_web">Based on website</string>
    <string name="preferred_action">Preferred action</string>
    <string name="fav_share_app">Favorite share app</string>
    <string name="choose_fav_share_app">Choose favorite share app</string>
    <string name="dynamic_summary_appweb">Color will be based on website if the site supports it else will be based on app</string>
    <string name="dynamic_summary_app">Color will be based on app that launches the website</string>
    <string name="dynamic_summary_web">Color will be based on the launched website</string>
    <string name="no_option_selected">No options selected</string>
    <string name="permission_required">Permission required</string>
    <string name="usage_permission_explanation_appcolor">To enable dynamic coloring of toolbar based on apps, Chromer needs your permission to know the apps you are using. Would you like to grant this permission now?</string>
    <string name="usage_permission_explanation_per_apps">To enable per app settings, Chromer needs your permission to know the apps you are using. Would you like to grant usage access permission now?</string>
    <string name="grant">Grant</string>
    <string name="open_source_contributions">Open source stuff</string>
    <string name="search_or_type_url">Search or type URL</string>
    <string name="voice_prompt">Speak your query</string>
    <string name="web_heads">Web Heads</string>
    <string name="webhead_spawn_summary">Initial spawn location</string>
    <string name="webhead_spawn_title">Choose where the web heads initially appears</string>
    <string name="credits">Credits</string>
    <string name="icon_design">Icon Design</string>
    <string name="overlay_permission_content">To draw the web heads on screen, screen overlay permission needs to be granted. Would you like to grant it now?</string>
    <string name="webheads_intro_1">When you open a link in any app, a floating bubble called web head will be created on screen and Chromer will attempt to prefetch the link.</string>
    <string name="webheads_intro_2_new">On opening multiple links, these web heads will automatically stack on each other. Long press on web head to access the context menu.</string>
    <string name="webheads_intro_3">When you start dragging a web head, a trash will be shown. Drop on this trash to delete the web head.</string>
    <string name="webheads_intro_4_lolli">Aggressive background loading will load the page in background while you continue to use the app you are in. \n <b>A flicker of opening the tab might appear. This is intentional and not a bug.</b></string>
    <string name="webheads_intro_4">Chromer prioritizes the last opened link and pre-fetches it. The recommended method is to click the web heads one by one from top to bottom. Enabling close web heads on launch wil make this seamless.</string>
    <string name="web_head_permission_toast">To open links in floating bubbles, Chromer needs drawing over other apps permission, please grant to continue or disable Web Heads in Chromer settings.</string>
    <string name="tap_close_all">Tap to close all</string>
    <string name="web_heads_service">Web Heads Active</string>
    <string name="join_beta">Join Beta</string>
    <string name="become_a_tester">Become a tester</string>
    <string name="merge_tabs">Merge tabs and apps</string>
    <string name="merge_tabs_explanation">See your tabs with other recent apps on your phone\'s Overview screen.</string>
    <string name="bottom_bar">Bottom Bar</string>
    <string name="open_in_new_tab">Open in new tab</string>
    <string name="behavior_preferences">Behavior</string>
    <string name="additional_preferences">Additional</string>
    <string name="notifications">Notifications</string>
    <string name="aggressive_background_loading">Aggressive background loading</string>
    <string name="aggressive_background_loading_desc">Web pages will be loaded in background instead of just pre-fetching</string>
    <string name="web_close_on_open_desc">Web heads will disappear once you open the link</string>
    <string name="web_close_on_open_title">Close web heads once clicked.</string>
    <string name="minimize">Minimize</string>
    <string name="load_faster_heading">Load pages faster with below options</string>
    <string name="amp">Accelerated Mobile Pages (AMP)</string>
    <string name="amp_summary">Load mobile optimized version of the website for much quicker and smoother reading experience.</string>
    <string name="article_mode">Article mode</string>
    <string name="article_mode_summary">Load sleek looking reader mode with no extra stuff focusing just on the content.</string>
    <string name="open_full_page">Open full page</string>
    <string name="chromer_options">Chromer Options</string>
</resources>