<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="settings"
    android:title="@string/settings">

    <PreferenceCategory android:title="@string/load_faster_heading">

        <arun.com.chromer.activities.settings.widgets.IconSwitchPreference
            android:defaultValue="false"
            android:key="amp_mode_pref"
            android:summary="@string/amp_summary"
            android:title="@string/amp" />

        <arun.com.chromer.activities.settings.widgets.IconSwitchPreference
            android:defaultValue="false"
            android:key="article_mode_pref"
            android:summary="@string/article_mode_summary"
            android:title="@string/article_mode" />
    </PreferenceCategory>
</PreferenceScreen>