<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:key="settings"
                  android:title="@string/settings">
    <PreferenceCategory android:title="@string/personalization">
        <!--suppress AndroidElementNotAllowed -->
        <arun.com.chromer.preferences.widgets.IconSwitchPreference
            android:defaultValue="true"
            android:key="toolbar_color_pref"
            android:title="@string/colored_toolbar"/>

        <!--suppress AndroidElementNotAllowed -->
        <arun.com.chromer.preferences.widgets.ColorPreference
            android:key="toolbar_color"
            android:title="@string/default_toolbar_color"
            app:color="@color/colorPrimary"/>

        <!--suppress AndroidElementNotAllowed -->
        <arun.com.chromer.preferences.widgets.IconSwitchPreference
            android:defaultValue="false"
            android:key="dynamic_color"
            android:title="@string/dynamic_toolbar_color"/>

        <arun.com.chromer.preferences.widgets.IconListPreference
            android:defaultValue="1"
            android:entries="@array/actionValues"
            android:entryValues="@array/actionKeys"
            android:key="preferred_action_preference"
            android:title="@string/preferred_action"/>

        <arun.com.chromer.preferences.widgets.IconListPreference
            android:defaultValue="1"
            android:entries="@array/animationValues"
            android:entryValues="@array/animationKeys"
            android:key="animation_preference"
            android:title="@string/choose_animation"/>

        <arun.com.chromer.preferences.widgets.IconListPreference
            android:defaultValue="1"
            android:entries="@array/animationSpeedValues"
            android:entryValues="@array/animationSpeedKeys"
            android:key="animation_speed_preference"
            android:title="@string/animation_speed"/>
    </PreferenceCategory>
</PreferenceScreen>