<?xml version="1.0" encoding="utf-8"?><!--
  ~ Chromer
  ~ Copyright (C) 2017 Arunkumar
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/additional_preferences">
        <!--suppress AndroidElementNotAllowed -->
        <arun.com.chromer.activities.settings.widgets.IconSwitchPreference
            android:defaultValue="true"
            android:key="warm_up_preference"
            android:summary="@string/keep_chrome_warmedup"
            android:title="@string/warmup_browser" />
        <!--suppress AndroidElementNotAllowed -->
        <arun.com.chromer.activities.settings.widgets.IconSwitchPreference
            android:defaultValue="false"
            android:key="pre_fetch_preference"
            android:summary="@string/pre_fetch_desc"
            android:title="@string/pre_fetch_content" />
        <!--suppress AndroidElementNotAllowed -->
        <arun.com.chromer.activities.settings.widgets.SubCheckBoxPreference
            android:defaultValue="true"
            android:key="wifi_preference"
            android:title="@string/only_on_wifi" />

        <!--suppress AndroidElementNotAllowed -->
        <arun.com.chromer.activities.settings.widgets.SubCheckBoxPreference
            android:defaultValue="false"
            android:key="pre_fetch_notification_preference"
            android:summary="@string/show_notification"
            android:title="@string/notifications" />
    </PreferenceCategory>
</PreferenceScreen>