<?xml version="1.0" encoding="utf-8"?><!--
  ~ Chromer
  ~ Copyright (C) 2017 Arunkumar
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_open_full_page"
        android:icon="@drawable/ic_open_in_browser_36dp"
        android:title="@string/open_full_page"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_action_button"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/choose_secondary_browser"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_copy_link"
        android:title="@string/copy_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_open_with"
        android:title="@string/open_with"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_share_with"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_more"
        android:checkable="false"
        android:title="@string/chromer_options"
        app:showAsAction="never" />
</menu>