<?xml version="1.0" encoding="utf-8"?><!--
  ~ Chromer
  ~ Copyright (C) 2017 Arunkumar
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/behavior_preferences">
        <!--suppress AndroidElementNotAllowed -->
        <arun.com.chromer.activities.settings.widgets.IconSwitchPreference
            android:defaultValue="true"
            android:key="merge_tabs_and_apps_preference"
            android:summary="@string/merge_tabs_explanation"
            android:title="@string/merge_tabs" />
        <!--suppress AndroidElementNotAllowed -->
        <arun.com.chromer.activities.settings.widgets.IconSwitchPreference
            android:key="blacklist_preference_dummy"
            android:summary="@string/blacklisted_explanation"
            android:title="@string/blacklisted_apps" />
        <!--suppress AndroidElementNotAllowed -->
        <arun.com.chromer.activities.settings.widgets.IconSwitchPreference
            android:defaultValue="true"
            android:key="warm_up_preference"
            android:summary="@string/keep_chrome_warmedup"
            android:title="@string/warmup_browser" />
    </PreferenceCategory>
</PreferenceScreen>