<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:key="settings"
                  android:title="@string/settings">


    <arun.com.chromer.preferences.widgets.IconSwitchPreference
        android:defaultValue="false"
        android:key="webhead_enabled_pref"
        android:summary="You can stack multiple links and view them later"
        android:title="Open links in floating bubbles"/>

    <arun.com.chromer.preferences.widgets.ColorPreference
        android:key="webhead_color"
        android:title="@string/web_heads_color"
        app:color="@color/web_head_bg"/>

    <arun.com.chromer.preferences.widgets.IconListPreference
        android:defaultValue="1"
        android:dialogTitle="@string/webhead_spawn_title"
        android:entries="@array/webHeadsSpawnValues"
        android:entryValues="@array/webHeadsSpawnKeys"
        android:key="webhead_spawn_preference"
        android:title="@string/webhead_spawn_summary"/>

    <arun.com.chromer.preferences.widgets.IconCheckboxPreference
        android:defaultValue="true"
        android:key="webhead_close_onclick_pref"
        android:summary="Web heads will disappear once you open the link"
        android:title="Close web heads on link open"/>

    <arun.com.chromer.preferences.widgets.IconCheckboxPreference
        android:defaultValue="false"
        android:key="webhead_favicons_pref"
        android:summary="Small icons extracted from websites will be shown"
        android:title="Show Favicons"/>

</PreferenceScreen>