<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_bar_root"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:weightSum="9"
    android:baselineAligned="false">

    <FrameLayout
        android:id="@+id/bottom_bar_open_in_new_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:contentDescription="@string/open_in_new_tab"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/bottom_bar_open_in_new_tab_img"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:contentDescription="@string/open_in_new_tab"
            android:gravity="center"
            android:padding="5dp"
            android:scaleType="fitCenter" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/bottom_bar_share"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:contentDescription="@string/share"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/bottom_bar_share_img"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/share"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:scaleType="fitCenter" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/bottom_bar_minimize_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:contentDescription="@string/minimize"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/bottom_bar_minimize_img"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:contentDescription="@string/minimize"
            android:gravity="center"
            android:padding="5dp"
            android:scaleType="fitCenter" />
    </FrameLayout>
</LinearLayout>