<?xml version="1.0" encoding="utf-8"?><!--
  ~ Chromer
  ~ Copyright (C) 2017 Arunkumar
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_bar_root"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_gravity="center"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:weightSum="9">

    <FrameLayout
        android:id="@+id/bottom_bar_open_in_new_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:contentDescription="@string/open_in_new_tab"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/bottom_bar_open_in_new_tab_img"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:contentDescription="@string/open_in_new_tab"
            android:gravity="center"
            android:padding="5dp"
            android:scaleType="fitCenter" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/bottom_bar_share"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:contentDescription="@string/share"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/bottom_bar_share_img"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:contentDescription="@string/share"
            android:gravity="center"
            android:padding="5dp"
            android:scaleType="fitCenter" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/bottom_bar_minimize_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:contentDescription="@string/minimize"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/bottom_bar_minimize_img"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:contentDescription="@string/minimize"
            android:gravity="center"
            android:padding="5dp"
            android:scaleType="fitCenter" />
    </FrameLayout>
</LinearLayout>